src/App/App.css
.main {
  position: absolute;
  top: 0;
  left: 0;
  height: 94%;
  width: 96%;
  margin: 2%;
  padding-bottom: 25%;
}

.shockinginfo {
  color: var(--shocking-info);
}

nav {
  position: relative;
  display: flex;
  height: 10%;
}

.left-info {
  display: flex;
  justify-content: flex-start;
  width: 50%;
}

.left-info div {
  margin-right: calc(4px + 1.94vw);
}

.right-info {
  display: flex;
  flex-direction: row-reverse;
  width: 50%;
}

.logo {
  display: flex;
  height: auto;
  width: auto;
  justify-content: center;
  align-items: center;
}

@-moz-document url-prefix() {
  .logo {
    width: 100px;
  }
  .left-info div {
    margin-left: calc(4px + 1.94vw);
  }
}

.logo img {
  height: 100%;
}

.logo span {
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo p {
  font-size: x-large;
  user-select: none;
  margin-left: 0.5rem;
}

.logo p:hover {
  user-select: none;
}

.gasprice-container {
  display: flex;
  height: auto;
  width: auto;
  user-select: none;
}

.gasprice-container p {
  line-height: 3rem;
  font-weight: normal;
}

.gasprice {
  display: flex;
  flex-direction: column;
  white-space: nowrap;
  align-content: center;
  font-size: calc(14px + 0.278vw);
  justify-content: center;
}

.gasprice span {
  color: var(--shocking-info);
}

.walletcontainer {
  display: flex;
  align-items: center;
}

.stats {
  display: flex;
  align-items: center;
}

.infocontainer {
  display: flex;
  flex-direction: column;
  margin: auto;
  margin-top: 5%;
  height: 55%;
  width: 50%;
  text-align: justify;
  font-size: 28px;
  background-color: var(--info-text-color);
  border-radius: 1rem;
  overflow: auto;
}

.chains {
  display: flex;
  border-bottom: 0.2rem solid var(--chains-border);
  justify-content: space-evenly;
}

.maintext {
  display: flex;
  flex-direction: column;
  height: 82%;
}

.maintext p {
  margin: 2%;
  cursor: default;
}

.tx-details {
  display: flex;
  flex-direction: column;
  margin: auto;
  margin-top: 5%;
  height: 50%;
  width: 50%;
  font-size: 28px;
  background-color: var(--info-text-color);
  border-radius: 1rem;
  justify-content: flex-start;
  align-items: flex-start;
  overflow-y: scroll;
}

.txbox.initial {
  display: flex;
  height: 50px;
  align-items: center;
  border-left: none;
  border-right: none;
  font-size: calc(1vw + 10px);
  min-height: 12.5%;
}

.txbox.initial div {
  height: 40px;
  justify-content: center;
  align-items: center;
  white-space: nowrap;
  font-weight: normal;
}

.tx-details-main {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: auto;
  overflow-y: scroll;
  justify-content: flex-start;
  align-items: center;
}

.sort-triangle {
  width: 10%;
  height: auto;
}

.hoverable {
  cursor: pointer;
}

.triangle {
  position: absolute;
  margin-top: 10px;
  height: 1%;
  width: auto;
}

.flipped {
  transform: scale(1, -1);
}

.txbox.initial .l2name {
  margin-left: 6%;
}

.txbox.initial .txhash {
  margin-left: 10%;
}

.txbox.initial .l2fee {
  margin-left: 10%;
}

.txbox.initial .l1fee {
  margin-left: 8%;
}

.txbox.initial .feessaved {
  margin-left: 6%;
}

.txbox.initial .cheapness {
  margin-left: 3%;
}

footer {
  position: fixed;
  display: block;
  height: fit-content;
  margin-top: 8%;
  width: 100%;
  height: 10%;
}

.leftbottom {
  position: absolute;
  display: flex;
  margin-left: -1.5%;
  left: 8px;
  bottom: 8px;
}

.disclaimer {
  font-size: small;
  font-weight: lighter;
  line-height: 2px;
  color: var(--disclaimer-color);
  user-select: none;
}

.rightbottom {
  position: absolute;
  display: flex;
  margin-right: 1.5%;
  right: 8px;
  bottom: 8px;
}

.socials {
  display: flex;
}

@media (max-width: 750px) {
  .right-info {
    position: absolute;
    right: 0;
  }

  .right-info div div,
  .right-info div a {
    height: 50%;
    width: auto;
  }

  .right-info .buttonishphotocontainer {
    display: none;
  }
}

@media (max-width: 650px) {
  .chains div {
    font-size: calc(4px + 1.278vw);
    text-indent: -10px;
  }

  .left-info {
    display: flex;
    flex-direction: column;
    max-width: 15%;
    width: 50%;
  }

  .left-info div {
    margin-top: -100px;
    margin-bottom: -20%;
  }

  .logo img {
    display: flex;
    padding-left: 80%;
    height: 25%;
    width: auto;
  }

  .logo span {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .logo p {
    font-size: x-large;
    user-select: none;
    margin-left: auto;
  }
}

